--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,14 +6,25 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/d3-scale-chromatic": "^3.0.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@visx/axis": "^3.0.1",
+    "@visx/group": "^3.0.0",
+    "@visx/legend": "^3.0.0",
+    "@visx/responsive": "^3.0.0",
+    "@visx/scale": "^3.0.0",
+    "@visx/shape": "^3.0.0",
+    "@visx/tooltip": "^3.0.0",
+    "d3-scale-chromatic": "^3.0.0",
     "framer-motion": "^7.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "snakecase-keys": "^5.4.5",
     "typescript": "^4.4.2"
   },
   "scripts": {
