--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/d3-scale-chromatic": "^3.0.0",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
     "@visx/axis": "^3.0.1",
     "@visx/group": "^3.0.0",
     "@visx/legend": "^3.0.0",
@@ -23,8 +15,18 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
+    "snakecase-keys": "^5.4.5"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/d3-scale-chromatic": "^3.0.0",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
-    "snakecase-keys": "^5.4.5",
     "typescript": "^4.4.2"
   },
   "scripts": {
