--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "miragejs": "^0.1.47",
     "react-scripts": "5.0.1",
     "resize-observer-polyfill": "^1.5.1",
     "typescript": "^4.4.2"
